added form inputs and labels, and css and js files

--- a/index.html
+++ b/index.html
@@ -8,45 +8,54 @@
   
   <title>Frontend Mentor | Contact form</title>
 
+  <link rel="stylesheet" href="./assets/css/styles.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
+<body >
 
-  Contact Us
+  <h1>Contact Us</h1>
 
-  First Name
+  <label for="first-name">First Name <span class="required-asterisk">*</span></label>
+  <input type="text" id="first-name" required>
   This field is required
 
-  Last Name
+  <label for="last-name">Last Name <span class="required-asterisk">*</span></label>
+  <input type="text" id="last-name" required>
   This field is required
 
-  Email Address
+  <label for="email-address">Email Address <span class="required-asterisk">*</span></label>
+  <input type="text" id="email-address" required>
   Please enter a valid email address
   This field is required
 
-  Query Type
+  <label>Query Type</label>
+  <input type="radio" name="query_type" id="general-inquiry">
+  <label for="general-inquiry">General Inquiry</label>
+  <input type="radio" name="query_type" id="support-request">
+  <label for="support-request">Support Request</label>
   General Enquiry
   Support Request
   Please select a query type
 
-  Message
+  <label for="message-box">Message</label>
   This field is required
 
-  I consent to being contacted by the team
+  <label for="consent-checkbox">I consent to being contacted by the team</label>
   To submit this form, please consent to being contacted
 
-  Submit
+  <button type="submit" onclick="successMessage()">Submit</button>
 
-  Message Sent!
+  <label for="">Message Sent!</label>
   Thanks for completing the form. We'll be in touch soon!
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="main.js"></script>
 </body>
 </html>
