--- a/index.html
+++ b/index.html
@@ -15,44 +15,53 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body >
+<body>
 
-  <h1>Contact Us</h1>
-
-  <!-- return keyword, must be true to allow form submission if all fields are filled -->
-  <form action="#" id="contact-form" name="contact_form" onsubmit="return validateForm()" required>
-    <div class="two-columns">
-      <label for="first-name">First Name <span class="required-asterisk">*</span></label>
-      <input type="text" id="first-name" name="first_name">
-      <p class="validation-paragraph"></p>
-    </div>
-    <div class="two-columns">
-      <label for="last-name">Last Name <span class="required-asterisk">*</span></label>
-      <input type="text" id="last-name" name="last_name">
-      <p class="validation-paragraph"></p>
-    </div>
-    <div>
-      <label for="email-address">Email Address <span class="required-asterisk">*</span></label>
-      <input type="email" id="email-address" name="email_address">
-      <p class="validation-paragraph"></p>
-    </div>
-    Please enter a valid email address
-    This field is required
-    <label>Query Type</label>
-    <input type="radio" name="query_type" id="general-inquiry">
-    <label for="general-inquiry">General Inquiry</label>
-    <input type="radio" name="query_type" id="support-request">
-    <label for="support-request">Support Request</label>
-    General Enquiry
-    Support Request
-    Please select a query type
-    <label for="message-box">Message</label>
-    <textarea name="message_box" id="message-box"></textarea>
-    <p class="validation-paragraph"></p>
-    <label for="consent-checkbox">I consent to being contacted by the team</label>
-    To submit this form, please consent to being contacted
-    <button type="submit">Submit</button>
-  </form>
+  <div class="container-card">
+    <h1>Contact Us</h1>
+    <!-- return keyword, must be true to allow form submission if all fields are filled -->
+    <form action="#" id="contact-form" name="contact_form" onsubmit="return validateForm()" novalidate>
+      <div class="two-columns">
+        <label for="first-name">First Name <span class="required-asterisk">*</span></label>
+        <input type="text" id="first-name" name="first_name">
+        <p class="validation-paragraph"></p>
+      </div>
+      <div class="two-columns">
+        <label for="last-name">Last Name <span class="required-asterisk">*</span></label>
+        <input type="text" id="last-name" name="last_name">
+        <p class="validation-paragraph"></p>
+      </div>
+      <div class="one-column">
+        <label for="email-address">Email Address <span class="required-asterisk">*</span></label>
+        <input type="email" id="email-address" name="email_address">
+        <p class="validation-paragraph"></p>
+        <p id="validation-email"></p>
+      </div>
+      <div class="one-column">
+        <label>Query Type</label>
+        <div class="two-columns">
+          <input type="radio" name="query_type" id="general-inquiry">
+          <label for="general-inquiry">General Inquiry</label>
+        </div>
+        <div class="two-columns">
+          <input type="radio" name="query_type" id="support-request">
+          <label for="support-request">Support Request</label>
+        </div>
+        <p class="validation-query-type"></p>
+        Please select a query type
+      </div>
+      <div class="one-column">
+        <label for="message-box">Message</label>
+        <textarea name="message_box" id="message-box"></textarea>
+        <p class="validation-paragraph"></p>
+      </div>
+      <div class="one-column">
+        <label for="consent-checkbox">I consent to being contacted by the team</label>
+        To submit this form, please consent to being contacted
+      </div>
+      <div class="one-column"><button type="submit">Submit</button></div>
+    </form>
+  </div>
 
   <label for="">Message Sent!</label>
   Thanks for completing the form. We'll be in touch soon!
