fixed email address validation text

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
           <input type="radio" name="query_type" id="support-request">
           <label for="support-request">Support Request</label>
         </div>
-        <p class="validation-query-type"></p>
-        Please select a query type
+        <p id="validation-query-type"></p>
       </div>
       <div class="one-column">
         <label class="label-control"for="message-box">Message</label>
@@ -56,6 +55,7 @@
         <p class="validation-paragraph"></p>
       </div>
       <div class="one-column">
+        <input type="checkbox" id="consent-checkbox" name="consent_checkbox">
         <label for="consent-checkbox">I consent to being contacted by the team</label>
         To submit this form, please consent to being contacted
       </div>
