--- a/index.html
+++ b/index.html
@@ -23,41 +23,41 @@
     <form action="#" id="contact-form" name="contact_form" onsubmit="return validateForm()" novalidate>
       <div class="two-columns">
         <label class="label-control" for="first-name">First Name <span class="required-asterisk">*</span></label>
-        <input type="text" id="first-name" name="first_name">
+        <input type="text" id="first-name" name="first_name" onfocusout="fieldSynchronousValidation(0)">
         <p class="validation-paragraph"></p>
       </div>
       <div class="two-columns">
         <label class="label-control" for="last-name">Last Name <span class="required-asterisk">*</span></label>
-        <input type="text" id="last-name" name="last_name">
+        <input type="text" id="last-name" name="last_name"
+        onfocusout="fieldSynchronousValidation(1)">
         <p class="validation-paragraph"></p>
       </div>
       <div class="one-column">
         <label class="label-control" for="email-address">Email Address <span class="required-asterisk">*</span></label>
-        <input type="email" id="email-address" name="email_address">
+        <input type="email" id="email-address" name="email_address" onfocusout="fieldSynchronousValidation(2)">
         <p class="validation-paragraph"></p>
-        <p id="validation-email"></p>
       </div>
       <div class="one-column">
         <label class="label-control">Query Type <span class="required-asterisk">*</span></label>
         <div class="two-columns">
-          <input type="radio" name="query_type" id="general-inquiry" onclick="uncheckRadio()">
+          <input type="radio" name="query_type" id="general-inquiry">
           <label for="general-inquiry">General Inquiry</label>
         </div>
         <div class="two-columns">
-          <input type="radio" name="query_type" id="support-request" onclick="uncheckRadio()">
+          <input type="radio" name="query_type" id="support-request">
           <label for="support-request">Support Request</label>
         </div>
         <p id="validation-query-type"></p>
       </div>
       <div class="one-column">
         <label class="label-control"for="message-box">Message</label>
-        <textarea name="message_box" id="message-box"></textarea>
+        <textarea name="message_box" id="message-box" onfocusout="fieldSynchronousValidation(3)"></textarea>
         <p class="validation-paragraph"></p>
       </div>
       <div class="one-column">
-        <input type="checkbox" id="consent-checkbox" name="consent_checkbox">
+        <input type="checkbox" id="consent-checkbox" name="consent_checkbox" onclick="checkBox()">
         <label for="consent-checkbox">I consent to being contacted by the team</label>
-        To submit this form, please consent to being contacted
+        <p class="validation-paragraph"></p>
       </div>
       <div class="one-column"><button type="submit">Submit</button></div>
     </form>
