--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>Frontend Mentor | Contact form</title>
 
   <link rel="stylesheet" href="./assets/css/styles.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -16,7 +18,6 @@
   </style>
 </head>
 <body>
-
   <div class="container-card">
     <h1>Contact Us</h1>
     <!-- return keyword, must be true to allow form submission if all fields are filled -->
@@ -44,7 +45,7 @@
           <label for="general-inquiry">General Inquiry</label>
         </div>
         <div class="two-columns">
-          <input type="radio" name="query_type" id="support-request">
+          <input type="radio" name="query_type" id="support-request" onclick="">
           <label for="support-request">Support Request</label>
         </div>
         <p id="validation-query-type"></p>
@@ -63,13 +64,16 @@
     </form>
   </div>
 
-  <label for="">Message Sent!</label>
-  Thanks for completing the form. We'll be in touch soon!
+  <div id="toast-notification">
+    <i class="fa-regular fa-circle-check"></i><strong>Message Sent!</strong>
+    <p>Thanks for completing the form. We'll be in touch soon!</p>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <div class="toast-notif" id="toast-notif"></div>
   <script src="./assets/js/functions.js"></script>
 </body>
 </html>
