completed successful form validation and submission

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p class="validation-paragraph"></p>
       </div>
       <div class="one-column">
-        <label class="label-control">Query Type <span class="required-asterisk">*</span></label>
+        <span class="label-control">Query Type <span class="required-asterisk">*</span></span>
         <div class="two-columns">
           <input type="radio" name="query_type" id="general-inquiry" onclick="dynamicRadio()">
           <label for="general-inquiry">General Inquiry</label>
