--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <div class="container-card">
     <h1>Contact Us</h1>
     <!-- return keyword, must be true to allow form submission if all fields are filled -->
-    <form action="#" id="contact-form" name="contact_form" onsubmit="return validateForm()" novalidate>
+    <!-- <form action="#" id="contact-form" name="contact_form" onsubmit="return validateForm()" novalidate> -->
+    <form action="" method="post" id="contact-form" name="contact_form" novalidate>
       <div class="two-columns">
         <label class="label-control" for="first-name">First Name <span class="required-asterisk">*</span></label>
         <input type="text" id="first-name" name="first_name" onfocusout="fieldSynchronousValidation(0)">
@@ -60,7 +61,7 @@
         <label for="consent-checkbox">I consent to being contacted by the team</label>
         <p class="validation-paragraph"></p>
       </div>
-      <div class="one-column"><button type="submit">Submit</button></div>
+      <div class="one-column"><button type="button" onclick="validateForm()">Submit</button></div>
     </form>
   </div>
 
