form finished, to polish toast notification

--- a/index.html
+++ b/index.html
@@ -24,30 +24,32 @@
       <!-- return keyword, must be true to allow form submission if all fields are filled -->
       <!-- <form action="#" id="contact-form" name="contact_form" onsubmit="return validateForm()" novalidate> -->
       <form action="" method="post" id="contact-form" name="contact_form" novalidate>
-        <div class="two-columns">
-          <label class="label-control" for="first-name">First Name <span class="required-asterisk">*</span></label>
-          <input type="text" id="first-name" name="first_name" onfocusout="fieldSynchronousValidation(0)">
-          <p class="validation-paragraph"></p>
-        </div>
-        <div class="two-columns">
-          <label class="label-control" for="last-name">Last Name <span class="required-asterisk">*</span></label>
-          <input type="text" id="last-name" name="last_name"
-          onfocusout="fieldSynchronousValidation(1)">
-          <p class="validation-paragraph"></p>
+        <div class="full-name">
+          <div class="two-columns">
+            <label class="label-control" for="first-name">First Name <span class="required-asterisk">*</span></label>
+            <input type="text" id="first-name" name="first_name" onfocusout="fieldSynchronousValidation(0)">
+            <p class="validation-paragraph"></p>
+          </div>
+          <div class="two-columns">
+            <label class="label-control" for="last-name">Last Name <span class="required-asterisk">*</span></label>
+            <input type="text" id="last-name" name="last_name"
+            onfocusout="fieldSynchronousValidation(1)">
+            <p class="validation-paragraph"></p>
+          </div>
         </div>
         <div class="one-column">
           <label class="label-control" for="email-address">Email Address <span class="required-asterisk">*</span></label>
           <input type="email" id="email-address" name="email_address" onfocusout="fieldSynchronousValidation(2)">
           <p class="validation-paragraph"></p>
         </div>
-        <div class="one-column"">
-          <span class="label-control">Query Type <span class="required-asterisk">*</span></span>
+        <div class="one-column">
+          <span class="label-control" id="query-label">Query Type <span class="required-asterisk">*</span></span>
           <div id="query-types">
-            <div class="two-columns query-types">
+            <div class="two-columns query-types" onclick="selectRadio('general-inquiry')">
               <input type="radio" name="query_type" id="general-inquiry" onclick="dynamicRadio()">
               <label for="general-inquiry">General Inquiry</label>
             </div>
-            <div class="two-columns query-types">
+            <div class="two-columns query-types" onclick="selectRadio('support-request')">
               <input type="radio" name="query_type" id="support-request" onclick="dynamicRadio()">
               <label for="support-request">Support Request</label>
             </div>
@@ -55,15 +57,16 @@
           <p id="validation-query-type"></p>
         </div>
         <div class="one-column">
-          <label class="label-control"for="message-box">Message</label>
+          <label class="label-control"for="message-box">Message <span class="required-asterisk">*</span></label>
           <textarea name="message_box" id="message-box" onfocusout="fieldSynchronousValidation(3)"></textarea>
           <p class="validation-paragraph"></p>
         </div>
         <div class="one-column" id="checkbox-flex">
           <input type="checkbox" id="consent-checkbox" name="consent_checkbox" onclick="checkBox()">
-          <label for="consent-checkbox" id="consent-text">I consent to being contacted by the team<span class="required-asterisk">*</span></label>
-          <p class="validation-paragraph"></p>
+          <label for="consent-checkbox" id="consent-text">I consent to being contacted by the team <span class="required-asterisk">*</span></label>
+          
         </div>
+        <p class="validation-paragraph"></p>
         <div class="one-column"><button type="button" onclick="validateForm()">Submit</button></div>
       </form>
     </div>
