--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="one-column" id="checkbox-flex">
           <input type="checkbox" id="consent-checkbox" name="consent_checkbox" onclick="checkBox()" onmouseover="style='border: 1px solid hsl(169, 82%, 27%);'" onmouseout="style='border: 1px solid hsl(186, 15%, 59%);'">
-          <label for="consent-checkbox" id="consent-text">I consent to being contacted by the team <span class="required-asterisk">*</span></label>
+          <label class="label-control" for="consent-checkbox" id="consent-text">I consent to being contacted by the team <span class="required-asterisk">*</span></label>
           
         </div>
         <p class="validation-paragraph"></p>
@@ -80,7 +80,7 @@
     
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/akri-dev">Akri</a>.
     </div>
   </div>
   <div class="toast-notif" id="toast-notif"></div>
