added autofocus attribute to first name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="full-name">
           <div class="two-columns">
             <label class="label-control" for="first-name">First Name <span class="required-asterisk">*</span></label>
-            <input type="text" id="first-name" name="first_name" onfocusout="fieldSynchronousValidation(0)" onfocusin="style='border: 1px solid hsl(169, 82%, 27%);'" onchange="fieldSynchronousValidation(0)" onmouseover="style='border: 1px solid hsl(169, 82%, 27%);'" onmouseout="style='border: 1px solid hsl(186, 15%, 59%);'">
+            <input type="text" id="first-name" name="first_name" onfocusout="fieldSynchronousValidation(0)" onfocusin="style='border: 1px solid hsl(169, 82%, 27%);'" onchange="fieldSynchronousValidation(0)" onmouseover="style='border: 1px solid hsl(169, 82%, 27%);'" onmouseout="style='border: 1px solid hsl(186, 15%, 59%);'" autofocus>
             <p class="validation-paragraph"></p>
           </div>
           <div class="two-columns">
